# libds

./: .gitignore  CMakeLists.txt  LICENSE  README
src/: .gitignore  CMakeLists.txt  Makefile  array.c  array.h  common.c  common.h  libds.h  list.c  list.h  tinytest.h
test/: CMakeLists.txt  test.c  test_array.c  test_list.c
